# marsrover

./: README.md
drive_controller/: drive_controller.ino
onboard_computer/: CMakeLists.txt  package.xml
onboard_computer/msg/: DriveControllerCommand.msg  JoystickMessage.msg  OnboardStatus.msg  TeleopCommand.msg
onboard_computer/scripts/: main.py  ros_onboard.py
remote_operator/: CMakeLists.txt  package.xml
remote_operator/msg/: StateCommand.msg
remote_operator/scripts/: gui.py  main.py  ros_driver.py
